[gd_scene load_steps=17 format=3 uid="uid://bp82bt55e1vtw"]

[ext_resource type="Script" path="res://shop.gd" id="1_lqwkj"]
[ext_resource type="Texture2D" uid="uid://cuddmvp8wng3n" path="res://sprite/flasks/flaskBlue.png" id="2_o4nyb"]
[ext_resource type="Texture2D" uid="uid://bpfn2il3u8rrn" path="res://sprite/backgroudShop.jpg" id="2_tlxfe"]
[ext_resource type="Script" path="res://Cash.gd" id="7_kjd7o"]

[sub_resource type="Animation" id="Animation_l3t6s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -400)]
}

[sub_resource type="Animation" id="Animation_25ant"]
resource_name = "TransIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -400), Vector2(0, 65)]
}

[sub_resource type="Animation" id="Animation_ebdd0"]
resource_name = "TransOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 100), Vector2(0, 800)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bym5a"]
_data = {
"RESET": SubResource("Animation_l3t6s"),
"TransIn": SubResource("Animation_25ant"),
"TransOut": SubResource("Animation_ebdd0")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i0y63"]
texture = ExtResource("2_tlxfe")

[sub_resource type="LabelSettings" id="LabelSettings_u5ddx"]

[sub_resource type="LabelSettings" id="LabelSettings_7vcon"]
font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ycl55"]
bg_color = Color(0.435294, 0, 0, 0.419608)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23fgj"]
bg_color = Color(0.435294, 0, 0, 0.419608)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fvb61"]
bg_color = Color(0.435294, 0, 0, 0.419608)

[sub_resource type="LabelSettings" id="LabelSettings_kxafk"]
font_color = Color(0.831373, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gypoi"]
bg_color = Color(0.831373, 0.117647, 0, 1)

[node name="shop" type="CanvasLayer"]
process_mode = 3
offset = Vector2(0, -400)
transform = Transform2D(1, 0, 0, 1, 0, -400)
script = ExtResource("1_lqwkj")

[node name="Anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../Panel")
libraries = {
"": SubResource("AnimationLibrary_bym5a")
}

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.605
anchor_right = 0.055
anchor_bottom = 0.605
offset_left = 45.48
offset_top = -149.9
offset_right = 324.2
offset_bottom = -6.89999
theme_override_styles/panel = SubResource("StyleBoxTexture_i0y63")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.533
anchor_top = 0.172
anchor_right = 0.533
anchor_bottom = 0.172
offset_left = -143.88
offset_top = -70.96
offset_right = 144.12
offset_bottom = 71.04
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="Sprite2D" parent="Control"]
position = Vector2(144, 58)
scale = Vector2(0.578125, 0.625)
texture = ExtResource("2_o4nyb")

[node name="Name" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.0
offset_right = 92.0
offset_bottom = 31.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_u5ddx")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Des" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 18.0
offset_right = 144.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "Для ..."
label_settings = SubResource("LabelSettings_7vcon")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Next" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.822
anchor_top = 0.5
anchor_right = 0.827
anchor_bottom = 0.5
offset_left = -36.736
offset_top = -11.0
offset_right = -22.176
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_ycl55")
text = ">"

[node name="Prev" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.099
anchor_bottom = 0.5
offset_left = 72.0
offset_top = -11.0
offset_right = 59.488
offset_bottom = 5.0
grow_vertical = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_23fgj")
text = "<"

[node name="Buy" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -18.0
offset_right = 32.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_fvb61")
text = "Купить"

[node name="Cash" type="Label" parent="Control"]
layout_mode = 0
offset_left = 197.0
offset_top = 122.0
offset_right = 269.0
offset_bottom = 142.0
theme_override_font_sizes/font_size = 8
text = "Монет: "
vertical_alignment = 1
script = ExtResource("7_kjd7o")

[node name="Error" type="Label" parent="Control"]
layout_mode = 0
offset_top = -1.0
offset_right = 287.0
offset_bottom = 44.0
mouse_filter = 1
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
label_settings = SubResource("LabelSettings_kxafk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Closebtn" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.154
anchor_bottom = -0.154
offset_left = 272.0
offset_top = 21.868
offset_right = 296.0
offset_bottom = 30.868
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = SubResource("StyleBoxFlat_gypoi")
text = "Х"

[connection signal="pressed" from="Control/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Control/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Control/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Control/Closebtn" to="." method="_on_closebtn_pressed"]
